fix: added 20px more room for intro to see the watch intro again button on mobile

--- a/src/pages/Forms/Form.css
+++ b/src/pages/Forms/Form.css
@@ -65,6 +65,6 @@
 
 @media screen and (max-width: 769px) {
   .insect-inspect-logo {
-    margin: -35px 0 -50px 0;
+    margin: -45px 0 -60px 0;
   }
 }
